# basic-cdk-rest-api

./: README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: books.py  http_creator.py
book_store/: book_store_construct.py  book_store_stack.py
tests/unit/: test_cdk_first_try_stack.py
